--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-move",
-  "description": "Grunt task for moving and renaming files and folders",
-  "version": "0.0.4",
+  "description": "Grunt task for moving and renaming files and directories",
+  "version": "0.0.5",
   "homepage": "https://github.com/prantlf/grunt-move",
   "author": {
     "name": "Ferdinand Prantl",
