Disable the test for moving across volumnes on Travis CI
Either they build in a directory symlink or mounted to /tmp, or they use some patch to allow moving across volumes.

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "main": "tasks/move.js",
   "scripts": {
-    "test": "grunt --verbose",
+    "test": "grunt",
     "check_coverage": "GRUNT_MOVE_COVERAGE=1 grunt",
     "post_coverage": "GRUNT_MOVE_COVERAGE=1 grunt default coveralls"
   },
