--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "test": "grunt",
     "check_coverage": "GRUNT_MOVE_COVERAGE=1 grunt",
     "post_coverage": "GRUNT_MOVE_COVERAGE=1 grunt default coveralls",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
+    "semantic-release": "semantic-release"
   },
   "dependencies": {
     "async": "~2.6.0",
@@ -47,7 +47,7 @@
     "grunt-istanbul": "^0.8.0",
     "jshint-stylish": "^2.2.1",
     "time-grunt": "^1.4.0",
-    "semantic-release": "^8.2.0"
+    "semantic-release": "^11.0.2"
   },
   "keywords": [
     "gruntplugin",
