--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
   - npm install -g npm
 before_script:
   - npm install -g grunt-cli
-#  - npm prune
+  - npm prune
 after_success:
   - npm run semantic-release
 branches:
