--- a/.travis.yml
+++ b/.travis.yml
@@ -6,16 +6,16 @@ cache:
 notifications:
   email: false
 node_js:
+  - '10'
   - '8'
   - '6'
-  - '4'
 before_install:
   - npm install -g npm
 before_script:
   - npm install -g grunt-cli
   - npm prune
 after_success:
-  - npm run semantic-release
+  - npm run travis-deploy-once "npm run semantic-release"
 branches:
   except:
     - /^v\d+\.\d+\.\d+$/
