--- a/package.json
+++ b/package.json
@@ -29,27 +29,23 @@
   "scripts": {
     "test": "grunt",
     "check_coverage": "GRUNT_MOVE_COVERAGE=1 grunt",
-    "post_coverage": "GRUNT_MOVE_COVERAGE=1 grunt default coveralls",
-    "semantic-release": "semantic-release",
-    "travis-deploy-once": "travis-deploy-once"
+    "post_coverage": "GRUNT_MOVE_COVERAGE=1 grunt default coveralls"
   },
   "dependencies": {
-    "async": "~2.6.1",
-    "chalk": "^2.4.1"
+    "async": "~2.6.2",
+    "chalk": "^2.4.2"
   },
   "devDependencies": {
     "grunt": "^1.0.3",
     "grunt-continue-ext": "^2.0.0",
-    "grunt-contrib-clean": "^1.1.0",
+    "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-jshint": "^1.1.0",
+    "grunt-contrib-jshint": "^2.0.0",
     "grunt-contrib-nodeunit": "^2.0.0",
     "grunt-coveralls": "^2.0.0",
     "grunt-istanbul": "^0.8.0",
     "jshint-stylish": "^2.2.1",
-    "semantic-release": "^15.9.14",
-    "time-grunt": "^1.4.0",
-    "travis-deploy-once": "^5.0.7"
+    "time-grunt": "^2.0.0"
   },
   "keywords": [
     "gruntplugin",
